reworked with okhttp